LinKreta_POC_Repository/force-app/main/default/objects/ErrorLog__c/ErrorLog__c.object-meta.xml
<CustomObject>
    <description>To store all the application exception We are using this Object. This will be helpful when an exception occurs in the future, background apex jobs, or flows.</description>
    <label>Error Log</label>
    <nameField>
        <displayFormat>Er-{0000000}</displayFormat>
        <label>Error Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>