LinKreta_POC_Repository/force-app/main/default/objects/ErrorLog__c/fields/ErrorAPI__c.field-meta.xml
<CustomField>
    <fullName>ErrorAPI__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is useful for Showing the Detail Page through Dynamic Form</inlineHelpText>
    <label>Error/API</label>
    <type>Checkbox</type>
</CustomField>