LinKreta_POC_Repository/force-app/main/default/objects/ErrorLog__c/fields/ExceptionMessage__c.field-meta.xml
<CustomField>
    <fullName>ExceptionMessage__c</fullName>
    <inlineHelpText>This is the brief description of the problem or situation involved.</inlineHelpText>
    <label>Exception Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>