LinKreta_POC_Repository/force-app/main/default/objects/ErrorLog__c/fields/ExceptionType__c.field-meta.xml
<CustomField>
    <fullName>ExceptionType__c</fullName>
    <inlineHelpText>The type of error occurred. Helpful in resolving it.</inlineHelpText>
    <label>Exception Type</label>
    <type>TextArea</type>
</CustomField>