LinKreta_POC_Repository/force-app/main/default/objects/ErrorLog__c/fields/GovernorLimit__c.field-meta.xml
<CustomField>
    <fullName>GovernorLimit__c</fullName>
    <inlineHelpText>The use of Salesforce Governor Limit During the execution of process.</inlineHelpText>
    <label>Governor Limit</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>