LinKreta_POC_Repository/force-app/main/default/objects/ErrorLog__c/fields/MethodName__c.field-meta.xml
<CustomField>
    <fullName>MethodName__c</fullName>
    <inlineHelpText>The Name of Method/Function of the Artifact in which the exception has occurred.</inlineHelpText>
    <label>Method/Function Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>