LinKreta_POC_Repository/force-app/main/default/objects/ErrorLog__c/fields/NameofArtifact__c.field-meta.xml
<CustomField>
    <fullName>NameofArtifact__c</fullName>
    <inlineHelpText>This Shows the Name of Apex Class, Flow , Apex Jobs In which exception occurred.</inlineHelpText>
    <label>Name of Artifact</label>
    <type>TextArea</type>
</CustomField>