LinKreta_POC_Repository/force-app/main/default/objects/ErrorLog__c/fields/RequestBody__c.field-meta.xml
<CustomField>
    <fullName>RequestBody__c</fullName>
    <inlineHelpText>Request JSON Body of the API callout.</inlineHelpText>
    <label>Request Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>