LinKreta_POC_Repository/force-app/main/default/objects/ErrorLog__c/fields/Response_Body__c.field-meta.xml
<CustomField>
    <fullName>Response_Body__c</fullName>
    <inlineHelpText>Response JSON Body of the API callout.</inlineHelpText>
    <label>Response Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>