LinKreta_POC_Repository/force-app/main/default/objects/ErrorLog__c/fields/SFDCRecordReference__c.field-meta.xml
<CustomField>
    <fullName>SFDCRecordReference__c</fullName>
    <inlineHelpText>The exception has occurred on this Record Id.</inlineHelpText>
    <label>SFDC Record Reference</label>
    <type>TextArea</type>
</CustomField>