LinKreta_POC_Repository/force-app/main/default/objects/ErrorLog__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <inlineHelpText>During API callout of this End Point URL we are receiving the exception.</inlineHelpText>
    <label>URL</label>
    <type>TextArea</type>
</CustomField>