LinKreta_POC_Repository/force-app/main/default/objects/ErrorLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ExceptionMessage__c</columns>
    <columns>NameofArtifact__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>